--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<script src="lib/crafty.js"></script>
+	<script src="src/components.js"></script>
+		<script src="src/wall.js"></script>
+		<script src="src/player.js"></script>
+		<script src="src/enemy.js"></script>
 	<script src="src/game.js"></script>
+
 
 	<script>
 		window.addEventListener('load', Game.start);
