--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script src="lib/crafty.js"></script>
 	<script src="src/components.js"></script>
 		<script src="src/wall.js"></script>
+		<script src="src/map.js"></script>
 		<script src="src/player.js"></script>
 		<script src="src/enemy.js"></script>
 	<script src="src/game.js"></script>
